--- a/ios/Podfile
+++ b/ios/Podfile
@@ -76,6 +76,7 @@ target 'rngeolocation' do
   pod 'DoubleConversion', :podspec => '../node_modules/react-native/third-party-podspecs/DoubleConversion.podspec'
   pod 'glog', :podspec => '../node_modules/react-native/third-party-podspecs/glog.podspec'
   pod 'Folly', :podspec => '../node_modules/react-native/third-party-podspecs/Folly.podspec'
+  pod 'RNFS', :path => '../node_modules/react-native-fs'
 
   target 'rngeolocationTests' do
     inherit! :complete
