--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,8 +16,9 @@
       "@components/*": ["./src/components/*"],
       "@screens/*": ["./src/screens/*"],
       "@router/*": ["./src/router/*"],
-      "@services/*": ["./src/services/*"],
+      "@services/*": ["src/lib/*"],
       "@lib/*": ["./src/lib/*"],
+      "@store/*": ["./src/store/*"],
       "@ts/*": ["./src/ts/*"]
     },
     "allowSyntheticDefaultImports": true /* Allow default imports from modules with no default export. This does not affect code emit, just typechecking. */,
