--- a/ios/rngeolocation/Info.plist
+++ b/ios/rngeolocation/Info.plist
@@ -37,8 +37,15 @@
 			</dict>
 		</dict>
 	</dict>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>Nós precisamos da sua localização</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string></string>
+	<string>Nós precisamos da sua localização</string>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>location</string>
+		<string>processing</string>
+	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
