--- a/package.json
+++ b/package.json
@@ -14,10 +14,14 @@
     "@react-navigation/native": "^5.1.6",
     "@react-navigation/stack": "^5.2.11",
     "axios": "^0.19.2",
+    "geolib": "^3.2.1",
     "lodash.debounce": "^4.0.8",
     "react": "16.11.0",
     "react-native": "0.62.2",
+    "react-native-background-actions": "^2.2.0",
+    "react-native-geolocation-service": "^4.0.0",
     "react-native-gesture-handler": "^1.6.1",
+    "react-native-push-notification": "^3.2.1",
     "react-native-reanimated": "^1.8.0",
     "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "^2.5.0",
@@ -34,6 +38,7 @@
     "@types/axios": "^0.14.0",
     "@types/jest": "^24.0.24",
     "@types/react-native": "^0.62.0",
+    "@types/react-native-push-notification": "^3.0.9",
     "@types/react-redux": "^7.1.7",
     "@types/react-test-renderer": "16.9.2",
     "@types/redux": "^3.6.0",
