create loadin in splash screen

--- a/ios/rngeolocation/Info.plist
+++ b/ios/rngeolocation/Info.plist
@@ -43,8 +43,10 @@
 	<string>Nós precisamos da sua localização</string>
 	<key>UIBackgroundModes</key>
 	<array>
+		<string>fetch</string>
 		<string>location</string>
 		<string>processing</string>
+		<string>remote-notification</string>
 	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
